# liqing

./: .gitignore
1-rag工单5.25/rag/: rag-project-工单.md
11-rag-工单6.3/: Embedding微调对比评测报告.md
11-rag-工单6.3/eleven_project/: README.md  实现文档.md
11-rag-工单6.3/rag/: FILES.md  PROJECT_SUMMARY.md
12-rag工单6.3/: 12-RAG工单-结单报告.md  LightRAG-vs-传统RAG-对比报告.md  LightRAG测试结果分析报告.md  lightRAG-问题测试结果-V1.txt  lightRAG-问题测试结果-V2.txt  lightRAG测试问题与参考答案.md
2-rag 工单5.26/rag/: rag-project-工单.md  在线RAG实现方案.md
2-rag 工单5.26/rag/teams/team/project/: eval.py  ingest.py  pyproject.toml
2-rag 工单5.26/rag/teams/team/project/src/: config.py
2-rag 工单5.26/rag/teams/team/project/src/api/: main.py  schemas.py
2-rag 工单5.26/rag/teams/team/project/src/chunker/: __init__.py  text_splitter.py
2-rag 工单5.26/rag/teams/team/project/src/generator/: answer_gen.py
2-rag 工单5.26/rag/teams/team/project/src/loader/: pdf_loader.py
2-rag 工单5.26/rag/teams/team/project/src/query/: understander.py
2-rag 工单5.26/rag/teams/team/project/src/retriever/: __init__.py
2-rag 工单5.26/rag/teams/team/project/src/store/: keyword_store.py  milvus_store.py
2-rag 工单5.26/rag/teams/team/project/tests/: test_loader.py
3-rag工单5.28/rag/: 检索优化报告.md
4-rag工单6.1/rag/: RAG项目报告_工单6.1.md
7-rag工单5.30/rag/: interview_questions.md
实训2第一周/LiveTalking/: build_miaozu_avatar.py  build_v3.py  detect_faces.py  find_face.py  预研笔记.md
工单14/: 人工智能NLP-RAG项目-14-修复低质量工业PDF的解析与信息丢失工单V1.1-20260123.md  解决方案报告.md  项目实现思路报告.md
工单15/: test_figure_retrieval.py  优化技术图纸与文本的跨模态检索流程.md  总结报告.md  技术分析文档.md  测试与优化报告.md
设计/: api_spec.md  讲解.txt
(+156 files in other folders)
